# freely-spoken

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  REASONIX.md  SECURITY.md  app.config.js  app.json  eas.json  package-lock.json  package.json
app/: debug.tsx  index.tsx
constants/: brand.ts  theme.ts
docs/: architecture-review-2026-05-16.md  debug-testing.md  foundation-models-packages.md  idle-ashes-labeling-eval.md  idle-ashes-overview.md  on-device-ai-approach.md  other_sources.md  other_wisdom_sources.md  privacy-policy.md  stoic-curation-rubric.md  (+1 more)
server/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
server/app/: config.py  crisis.py  llm_runner.py  main.py  observability.py  schemas.py
server/app/lookup/: base.py  bible_api.py  christian.py  dhammapada.py  dhammapada_catalog.json  stoic.py
server/app/providers/: cerebras.py  cloudflare.py  cohere.py  gemini.py  groq.py  huggingface.py  mistral.py  nvidia.py  openrouter.py  together.py
server/scripts/: curl-christian.sh  curl-stoic.sh  curl-unknown-variant.sh  hf_smoke.py  load-test-dhammapada.py  provider-health.py
server/tests/: conftest.py  test_christian_crisis.py  test_dhammapada_catalog.py  test_dhammapada_crisis.py  test_dhammapada_shortlist.py  test_dhammapada_validation.py  test_huggingface_provider.py  test_llm_runner_exhaustion.py  test_llm_runner_fallthrough.py  test_llm_runner_routing.py  test_observability.py
server/tests/fixtures/: lookup_inputs.json
tools/lookup-harness/: .env.example  README.md  pyproject.toml  requirements.txt  start.sh
tools/lookup-harness/app/: main.py  pipeline.py
tools/lookup-harness/app/lookup/: base.py  bible_api.py  christian.py  stoic.py
tools/lookup-harness/app/providers/: gemini.py  groq.py  openrouter.py
tools/lookup-harness/app/templates/: index.html  result.html
tools/lookup-harness/fixtures/: samples.json
(+98 files in other folders)
