[project]
name = "mic-check-lookup"
version = "0.1.0"
description = "Hosted lookup backend for the mic-check iOS app. Receives anonymized sentiment metadata from the device, picks a canonical reference via an LLM, fetches canonical text from a trusted source, returns the result."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.lookup", "app.providers"]
