[project]
name = "lookup-harness"
version = "0.1.0"
description = "Mac-local web harness for iterating on verse-selection prompts"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "starlette<1.0",
  "python-multipart>=0.0.20",
  "jinja2>=3.1",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "uvicorn>=0.30",
]
